Fix navigation calendar focusing color contrast

--- a/packages/components/src/date-time/style.scss
+++ b/packages/components/src/date-time/style.scss
@@ -50,6 +50,11 @@
 	.DayPickerNavigation_button__horizontalDefault {
 		padding: 2px 8px;
 		top: 20px;
+
+		&:focus {
+			border-color: $blue-medium-focus;
+			box-shadow: 0 0 0 1px $blue-medium-focus;
+		}
 	}
 
 	.DayPicker_weekHeader {
